# MoEForge

./: README.md
moeforge/: LICENSE  README.md  pyproject.toml
moeforge/examples/: train_moe.py
moeforge/moeforge/: __init__.py  config.py
moeforge/moeforge/kernels/: __init__.py  triton_kernels.py
moeforge/moeforge/layers/: __init__.py  attention.py  expert.py  moe.py  normalization.py
moeforge/moeforge/models/: __init__.py  transformer.py
