[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moeforge"
version = "0.1.0"
description = "Fast and memory-efficient Mixture of Experts training library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Yogi", email = "madrasle@example.com"}
]
keywords = [
    "deep-learning",
    "mixture-of-experts",
    "moe",
    "transformer",
    "llm",
    "pytorch",
    "cuda",
    "optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy",
]

[project.optional-dependencies]
flash-attn = [
    "flash-attn>=2.0.0",
]
liger = [
    "liger-kernel",
]
full = [
    "flash-attn>=2.0.0",
    "liger-kernel",
    "deepspeed",
    "transformers",
    "datasets",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/MadrasLe/moeforge"
Repository = "https://github.com/MadrasLe/moeforge"
Documentation = "https://github.com/MadrasLe/moeforge#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["moeforge*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
